name:                HsCmp
version:             0.1.0.0
synopsis:            cmp utility in haskell
-- description:
homepage:            https://github.com/yaccz/hscmp
license:             BSD3
license-file:        LICENSE
author:              Jan Matějka (yaccz) <jmatejka@suse.cz>
maintainer:          Jan Matějka (yaccz) <jmatejka@suse.cz>
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hscmp
  main-is: hscmp.hs
  build-depends:        base >=4.6 && <4.7
                        , mmap
                        , MissingH
                        , bytestring
  -- hs-source-dirs:
  default-language:     Haskell2010
